# crafting-interpreters

./: .gitignore  README.md  benchmark.sh  generate-ast.py  generate_ast.py  test-golox.sh  tester.sh
examples/: arithmetic.lox  ch8_challenge3.lox  class.lox  comma.lox  conditions.lox  expression.lox  functions.lox  hello_world.lox  inheritence.lox  leaking_scope.lox  loops.lox  math.lox  multiline_comment.lox  resolver.lox  scope.lox  ternary.lox  variables.lox
golox/: callable.go  class.go  environment.go  environment_test.go  expression.go  expression_printer.go  expression_printer_test.go  function.go  go.mod  interpreter.go  interpreter_test.go  main.go  native.go  parser.go  parser_test.go  reporting.go  resolver.go  scanner.go  scanner_test.go  stack.go  statement.go  token.go  util.go  util_test.go  value.go
loxrs/: Cargo.toml
loxrs/src/: chunk.rs  compiler.rs  main.rs  object.rs  options.rs  scanner.rs  value.rs  vm.rs
