[package]
name = "loxrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argh = "0.1"
console-subscriber = "0.1.8"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"
tokio = { version = "1.21", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
#default = ["dynamic_stack", "allow_divide_by_zero"]
#default = ["dynamic_stack", "allow_divide_by_zero", "extended_string_concat"]
default = ["dynamic_stack", "allow_divide_by_zero", "extended_string_concat", "debug_code", "debug_trace", "gc_leak_check"]
debug_code = []
debug_trace = []
dynamic_stack = []
dynamic_frames = []
dynamic_locals = []
native_print = []
extended_opcodes = []
gc_leak_check = []
extended_string_concat = []
extended_loops = []
ternary = []
switch = []
allow_divide_by_zero = []
